[package]
name = "whacker-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1", features = ["http1", "client"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-std", "io-util"] }
http-body-util = { version = "0.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "client"] }
